tests/files/type_checker_tests/should_fail/079.cmdr
//Should fail using uninitialized variable
x: b = 3;
